# Computer-Vision-Projects

ConcreteCrackDetection/: Kaggle-ConcreteCrackDetection.ipynb  README.md
FaceAnonymizer/: README.md  pyproject.toml
FaceAnonymizer/src/: main.py
NameTagFinder/: README.md  pyproject.toml
NameTagFinder/data/YOLO/: data.yaml
NameTagFinder/data/YOLO/train/: labels.cache
NameTagFinder/data/YOLO/train/labels/: NameTag0.txt  frame_000378.txt  frame_000379.txt  frame_000380.txt  frame_000381.txt  frame_000382.txt  frame_000383.txt  frame_000384.txt  frame_000385.txt  frame_000386.txt  frame_000426.txt  frame_000427.txt  (+114 more)
NameTagFinder/src/: prototype1_mask&contour_image.ipynb  prototype1_mask&contour_video.ipynb  prototype2_YOLO_video.ipynb
ParkingLotStatus/: README.md  pyproject.toml
ParkingLotStatus/output/: bboxes.json
ParkingLotStatus/src/: bbox_painter.py  main.ipynb  parking_detector.py
ParkingLotStatus/src/archive/: bbox_painter.ipynb  parking_detector.ipynb
SemanticSegmentation_Segformer/: README.md  pyproject.toml
SemanticSegmentation_Segformer/src/: SemanticSeg_Pretrained.ipynb
StrawberryDetetcion_YOLO/: README.md  pyproject.toml
StrawberryDetetcion_YOLO/data/strawberry/test/: labels.cache
StrawberryDetetcion_YOLO/data/strawberry/train/: labels.cache
StrawberryDetetcion_YOLO/data/strawberry/valid/: labels.cache
StrawberryDetetcion_YOLO/runs/detect/train/: args.yaml  results.csv
WeatherClassification/: README.md  pyproject.toml
_RandomBasicOperations/: pyprojecet.toml  pyproject.toml
_RandomBasicOperations/src/: Contour.ipynb
(+2 files in other folders)
